# TheDudeToHuman

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imhex.pattern
.github/workflows/: clang-format.yml  release.yml  test-compile.yml
src/: CMakeLists.txt  DudeDatabase.cpp  DudeDatabase.h  DudeTypes.h  SqliteReader.cpp  SqliteReader.h  TheDudeToHuman.cpp  dude_database.cpp  dude_database.h  dude_field_id.h  dude_types.h  sqlite_reader.cpp  sqlite_reader.h
src/common/: CMakeLists.txt  common_funcs.h  string_util.cpp  string_util.h
src/the_dude_to_human/: CMakeLists.txt  TheDudeToHuman.cpp  dude_database.cpp  dude_database.h  dude_field_id.h  dude_types.h  sqlite_reader.cpp  sqlite_reader.h
src/the_dude_to_human/database/: dude_database.cpp  dude_database.h  dude_field_id.h  dude_field_parser.cpp  dude_field_parser.h  dude_json.cpp  dude_json.h  dude_types.h  dude_validator.cpp  dude_validator.h
src/the_dude_to_human/gzip/: gzip.cpp  gzip.h
src/the_dude_to_human/mikrotik/: mikrotik_device.cpp  mikrotik_device.h
src/the_dude_to_human/sqlite/: sqlite_reader.cpp  sqlite_reader.h  sqlite_types.h  sqlite_writer.cpp  sqlite_writer.h
